<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_id">1505094703080117</string>
    <string name="app_name">HazmeElParo</string>
    <string name="texto_instrucciones_uno">Es una aplicación para reportar el acoso 
sexual y la violencia de genero hacia las mujeres en el transporte público, en 3 sencillos pasos.</string>
    <string name="texto_numero_1">CONFIGURA</string>
    <string name="texto_numero_2">REPORTA</string>
    <string name="texto_numero_3">CONECTA</string>
    <string name="registro_et_telefono">Teléfono</string>
    <string name="mensaje_emergencia">Márcame a mi celular en cuanto puedas, por favor.</string>
    <string name="mensaje_emergencia_hint">Agrega un mensaje de emergencia</string>
    <string name="eliminar_contacto">Eliminar contacto</string>
    <string name="instrucciones_contacto">Si en algún momento te sientes inseguro o agredido, puedes apretar el botón de REPORTA y se mandará una notificación al centro de mando y al contacto que elijas en este momento.</string>
    <string name="registro_btn_guardar">Guardar</string>
    <string name="registro_titulo">Contacto de emergencia</string>
    <string name="registro_selecciona_uno">Selecciona uno</string>
    <string name="registro_telefono_vacio">Debes llenar el teléfono correctamente</string>
    <string name="registro_correo_vacio">El mensaje NO puede estar vacio</string>
    <string name="registro_telefono_largo">El teléfono debe ser de 10 digitos</string>
    <string name="registro_telefono_incorrecto">El teléfono debe ser sólo de números</string>
    <string name="registro_correo_incorrecto">El correo está mal escrito</string>

    <!-- Bottons -->
    <string name="btn_continuar">Continuar</string>
    <string name="btn_reporta">Reporta</string>
    <string name="btn_conecta">Conecta</string>
    <string name="dialogo_btn_aceptar">Aceptar</string>

    <!-- Dialogos -->
    <string name="espere">Espere por favor</string>
    <string name="atras_salir">Presiona una vez más para salir</string>
    <string name="title_activity_hazme_el_paro">HazmeElParoActivity</string>
    <string name="title_section1">HazmeElParo</string>
    <string name="title_section2">Contacto</string>
    <string name="title_section3">AcercaDe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="problemas_titulo">¿Quién está teniendo problemas?</string>
    <string name="notificar_chofer_familia">Gracias por reportar, hemos notificado al centro de mando y a tu contacto de seguridad.</string>
    <string name="notificar_chofer">Gracias por reportar, hemos notificado al centro de mando.</string>

</resources>