<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.citydevs.hazmeelparo.InstructionsActivity$PlaceholderFragment" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/banner_rojo" />

    <ImageView
        android:id="@+id/instrucciones_iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo_hazme_el_paro" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instrucciones_iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textColor="@color/color_negro"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/texto_instrucciones_uno"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:scaleType="fitEnd"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_numero_1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/texto_numero_1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true" >

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:scaleType="fitEnd"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_numero_2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/texto_numero_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2"
                android:layout_centerHorizontal="true" >

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:scaleType="fitEnd"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_numero_3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/texto_numero_3" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_continuar" />
</RelativeLayout>