<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/color_blanco"
    android:gravity="center"
    tools:context=".RegistroContactosEmergenciaActivity" >

    <ScrollView
        android:id="@+id/mitaxiregistermanually_sv_container_infouser_emer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btn_eliminar_contacto"
        android:layout_below="@+id/registro_btn_guardar"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:paddingTop="5dp"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/mitaxiregistermanually_ll_contactos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingTop="3dp" >
            
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/instrucciones_contacto" />

            <LinearLayout
                android:id="@+id/mitaxiregistermanually_ll_container_infouser_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/marco"
                android:orientation="horizontal"
                android:padding="5dp" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8"
                    android:orientation="vertical" >

                    <com.citydevs.hazmeelparo.contact.EditTextBackEvent
                        android:id="@+id/registro_et_telefono"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="3dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight=".9"
                        android:background="@drawable/selector_edittext"
                        android:digits="0123456789"
                        android:drawableLeft="@drawable/ic_launcher_telefono"
                        android:ems="10"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/registro_et_telefono"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:textColorHint="@android:color/darker_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"
                    android:orientation="vertical" >

                    <ImageButton
                        android:id="@+id/registro_btn_contacto"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="3dp"
                        android:background="@color/color_transparente"
                        android:src="@drawable/ic_launcher_perfil" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/marco"
                android:orientation="horizontal"
                android:padding="5dp" >

                <com.citydevs.hazmeelparo.contact.EditTextBackEvent
                    android:id="@+id/registro_et_mensaje_emergencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/selector_edittext"
                    android:ems="10"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/mensaje_emergencia_hint"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:maxLength="80"
                    android:padding="5dp"
                    android:singleLine="false"
                    android:text="@string/mensaje_emergencia" />
            </LinearLayout>

            
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/banner_rojo" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_launcher_numero_1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.45"
            android:gravity="center_vertical"
            android:text="@string/texto_numero_1"
            android:textColor="@color/color_negro"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/registro_btn_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_margin="5dp"
        android:layout_toRightOf="@+id/mitaxiregistermanually_tv_label"
        android:background="@drawable/selector_btn_generic"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/registro_btn_guardar"
        android:textColor="@drawable/selector_txt_boton_redondo" />

    <TextView
        android:id="@+id/mitaxiregistermanually_tv_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/registro_btn_guardar"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/imageView1"
        android:layout_alignTop="@+id/registro_btn_guardar"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/registro_titulo"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_eliminar_contacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/selector_btn_generic"
        android:padding="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/eliminar_contacto"
        android:textColor="@drawable/selector_txt_boton_redondo" />

</RelativeLayout>